deploy/base/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
  labels:
    app.kubernetes.io/component: server
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/component: server
  ports:
    - name: http
      port: 8080
      targetPort: 8080
