deploy/base/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    app.kubernetes.io/component: web
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 3000
      targetPort: 3000
